excodes/store-empty-to-factory-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stock-empty-to-factory-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: stock-empty-to-factory
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
            matchLabels:
              app: stock-empty-to-factory
      ports:
        - protocol: TCP
          port: 6666
